fix anchor link spacing

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ a {
   align-items: center;
 }
 
-#about {
+.about {
   width: 250px;
   display: flex;
   flex-direction: column;
@@ -355,7 +355,7 @@ footer p {
     text-align: left;
   }
 
-  #about {
+  .about {
     width: 450px;
   }
 
@@ -462,7 +462,7 @@ footer p {
     margin-top: 0;
   }
 
-  #about {
+  .about {
     width: 450px;
   }
 
